--- a/Code/Game/Game.vcxproj
+++ b/Code/Game/Game.vcxproj
@@ -61,6 +61,18 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <CustomBuildStep>
+      <Command>copy "$(TargetPath)" "$(GameDir)$(TargetFileName)" /y</Command>
+    </CustomBuildStep>
+    <CustomBuildStep>
+      <Message>Copy game executable to final location</Message>
+    </CustomBuildStep>
+    <CustomBuildStep>
+      <Outputs>$(GameDir)$(TargetFileName)</Outputs>
+    </CustomBuildStep>
+    <CustomBuildStep>
+      <Inputs>$(TargetPath)</Inputs>
+    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -78,12 +90,25 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <CustomBuildStep>
+      <Command>copy "$(TargetPath)" "$(GameDir)$(TargetFileName)" /y</Command>
+    </CustomBuildStep>
+    <CustomBuildStep>
+      <Message>Copy game executable to final location</Message>
+    </CustomBuildStep>
+    <CustomBuildStep>
+      <Outputs>$(GameDir)$(TargetFileName)</Outputs>
+    </CustomBuildStep>
+    <CustomBuildStep>
+      <Inputs>$(TargetPath)</Inputs>
+    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
-    <ClInclude Include="Resources\Resource.h" />
+    <ClInclude Include="..\..\Resources\Resource.h" />
     <ClInclude Include="PreCompiled.h" />
-    <ClInclude Include="Resources\targetver.h" />
+    <ClInclude Include="..\..\Resources\targetver.h" />
+    <ClInclude Include="Win32Management.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
@@ -91,13 +116,14 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Win32Management.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Resources\Game.rc" />
+    <ResourceCompile Include="..\..\Resources\Game.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Resources\Game.ico" />
-    <Image Include="Resources\small.ico" />
+    <Image Include="..\..\Resources\Game.ico" />
+    <Image Include="..\..\Resources\small.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
