--- a/Code/Game/Game.vcxproj.filters
+++ b/Code/Game/Game.vcxproj.filters
@@ -5,6 +5,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Graphics System">
+      <UniqueIdentifier>{39ddbed2-40d9-40e6-918d-b416aeed2981}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Win32">
+      <UniqueIdentifier>{3e79d4ba-01e8-4109-943d-cc52d2c1a9be}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
@@ -15,12 +21,22 @@
     <ClInclude Include="..\..\Resources\targetver.h">
       <Filter>Resource Files</Filter>
     </ClInclude>
-    <ClInclude Include="Win32Management.h" />
+    <ClInclude Include="Win32Management.h">
+      <Filter>Win32</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics.h">
+      <Filter>Graphics System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="PreCompiled.cpp" />
-    <ClCompile Include="Win32Management.cpp" />
+    <ClCompile Include="Win32Management.cpp">
+      <Filter>Win32</Filter>
+    </ClCompile>
+    <ClCompile Include="Graphics.cpp">
+      <Filter>Graphics System</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\..\Resources\Game.rc">
