--- a/Code/Game/Game.vcxproj.filters
+++ b/Code/Game/Game.vcxproj.filters
@@ -14,6 +14,9 @@
     <Filter Include="PreCompiled">
       <UniqueIdentifier>{971ef304-6519-4dd5-97e0-08c624b3b029}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Debug">
+      <UniqueIdentifier>{a33bf4c5-4636-47b1-a1a4-eab48b7e8f62}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
@@ -32,6 +35,9 @@
     <ClInclude Include="GraphicsSystem.h">
       <Filter>Graphics System</Filter>
     </ClInclude>
+    <ClInclude Include="Debug.h">
+      <Filter>Debug</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
@@ -43,6 +49,9 @@
     </ClCompile>
     <ClCompile Include="GraphicsSystem.cpp">
       <Filter>Graphics System</Filter>
+    </ClCompile>
+    <ClCompile Include="Debug.cpp">
+      <Filter>Debug</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
