Added LuaLib project and updated property macro files

--- a/Code/DefaultLocations.props
+++ b/Code/DefaultLocations.props
@@ -7,4 +7,12 @@
   <PropertyGroup>
     <IntDir>$(IntermediateDir)</IntDir>
   </PropertyGroup>
+  <ItemDefinitionGroup>
+    <Lib>
+      <AdditionalLibraryDirectories>$(LibDir)</AdditionalLibraryDirectories>
+    </Lib>
+    <Link>
+      <AdditionalLibraryDirectories>$(LibDir)</AdditionalLibraryDirectories>
+    </Link>
+  </ItemDefinitionGroup>
 </Project>
