Added material, Initial checkin

--- a/Code/Game/Game.vcxproj.filters
+++ b/Code/Game/Game.vcxproj.filters
@@ -33,6 +33,9 @@
       <Filter>Resource Files</Filter>
     </ClInclude>
     <ClInclude Include="PreCompiled.h" />
+    <ClInclude Include="Material.h">
+      <Filter>Graphics System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
@@ -46,6 +49,9 @@
       <Filter>Debug</Filter>
     </ClCompile>
     <ClCompile Include="PreCompiled.cpp" />
+    <ClCompile Include="Material.cpp">
+      <Filter>Graphics System</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resources\Game.rc">
