--- a/Code/Game/Game.vcxproj
+++ b/Code/Game/Game.vcxproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <ClInclude Include="Debug.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="Resources\Resource.h" />
     <ClInclude Include="GraphicsSystem.h" />
     <ClInclude Include="PreCompiled.h" />
@@ -122,6 +123,7 @@
     <ClCompile Include="Debug.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GraphicsSystem.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="PreCompiled.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
