--- a/Code/Tools/BuildAssets/BuildAssets.vcxproj
+++ b/Code/Tools/BuildAssets/BuildAssets.vcxproj
@@ -67,7 +67,7 @@
     <CustomBuild />
     <CustomBuild />
     <CustomBuildStep>
-      <Command>"$(BinDir)AssetBuilder.exe" fragmentShader.hlsl vertexShader.hlsl</Command>
+      <Command>"$(BinDir)AssetBuilder.exe" fragmentShader.hlsl vertexShader.hlsl Simple.mat.lua</Command>
     </CustomBuildStep>
     <CustomBuildStep>
       <Message>Building Assets</Message>
@@ -98,7 +98,7 @@
     <CustomBuild />
     <CustomBuild />
     <CustomBuildStep>
-      <Command>"$(BinDir)AssetBuilder.exe" fragmentShader.hlsl vertexShader.hlsl</Command>
+      <Command>"$(BinDir)AssetBuilder.exe" fragmentShader.hlsl vertexShader.hlsl Simple.mat.lua</Command>
     </CustomBuildStep>
     <CustomBuildStep>
       <Message>Building Assets</Message>
